fix: frontend: table cell text overflow

--- a/src/acmManager.Web.Mvc/wwwroot/view-resources/Views/Shared/Layout.css
+++ b/src/acmManager.Web.Mvc/wwwroot/view-resources/Views/Shared/Layout.css
@@ -29,3 +29,30 @@
         padding: 20px 50px;
     }
 }
+
+::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #efefef;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #c1c1c1;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+}
+
+.text-overflow {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
